--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="content">
         <div class="left-area">
             <div class="contact">
-                <h4>CONTACT</h4>
+                <h4>IGGLIA3 </h4>
                 <h5>PHONE</h5>
                 <p>+261-34-01-450-52</p>
                 <h5>Email</h5>
